# DisQover

./: README.md  pyproject.toml  requirements.txt
notebooks/: DisQover_demo.ipynb
package/: pyproject.toml
package/src/DisQover/: DisQover.py
package/src/DisQover.egg-info/: PKG-INFO
src/DisQover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: DisQover_demo.ipynb
